hero section done ✔

--- a/index.html
+++ b/index.html
@@ -5,15 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strict</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- navbar start -->
    <div class="container">
-    <div class="nav">
-        <img src="./image/Logo.png" alt="logo">
+        <div class="nav">
+            <img src="./image/Logo.png" alt="logo">
+        </div>
+    </div>
+<!-- navbar end -->
+ <!-- hero section start -->
+   <div class="bg_img">
+    <div class="hero_content">
+        <h2>strict</h2>
+    <hr>
+    <p>STRICT is a responsible theme with a clean and minimal look</p>
+    <button class="btn">Call to action</button>
+    <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" style="width:32px;">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+      </svg> -->
+      <i class="fa-solid fa-chevron-down"></i>
+      
     </div>
    </div>
-   <div class="bg_img">
-    
-   </div>
+   <!-- hero section end -->
 </body>
 </html>
