image gallery done

--- a/index.html
+++ b/index.html
@@ -70,5 +70,53 @@
     </div>
   </div>
   <!-- service section end  -->
+  <!-- image_gallery  -->
+  <div class="main_div">
+   <div class="container">
+    <div class="title">
+        <h3>Showcase your work like a pro</h3>
+    </div>
+    <div class="image">
+        <div class="img_01 img_wrapper">
+            <img src="image/imagegrid_1.png" alt="">
+            <div class="icon_wrapper">
+                <i class="fa-solid fa-magnifying-glass-plus"></i>
+                <i class="fa-solid fa-link"></i>
+            </div>
+        </div>
+        <div class="img_02 img_wrapper"> <img src="image/imagegrid_2.png" alt="">
+               <div class="icon_wrapper">
+                <i class="fa-solid fa-magnifying-glass-plus"></i>
+                <i class="fa-solid fa-link"></i>
+            </div>
+        </div>
+        <div class="img_03 img_wrapper"> <img src="image/imagegrid_3.png" alt="">
+               <div class="icon_wrapper">
+                <i class="fa-solid fa-magnifying-glass-plus"></i>
+                <i class="fa-solid fa-link"></i>
+            </div>
+        </div>
+        <div class="img_04 img_wrapper"> <img src="image/imagegrid_4.png" alt="">
+               <div class="icon_wrapper">
+                <i class="fa-solid fa-magnifying-glass-plus"></i>
+                <i class="fa-solid fa-link"></i>
+            </div>
+        </div>
+        <div class="img_05 img_wrapper"> <img src="image/imagegrid_5.png" alt="">
+               <div class="icon_wrapper">
+                <i class="fa-solid fa-magnifying-glass-plus"></i>
+                <i class="fa-solid fa-link"></i>
+            </div>
+        </div>
+        <div class="img_06 img_wrapper"><img src="image/imagegrid_6.png" alt="">
+               <div class="icon_wrapper">
+                <i class="fa-solid fa-magnifying-glass-plus"></i>
+                <i class="fa-solid fa-link"></i>
+            </div>
+        </div>  
+    </div>
+   </div>
+  </div>
+  <!-- image gallery end  -->
 </body>
 </html>
