--- a/index.html
+++ b/index.html
@@ -118,5 +118,26 @@
    </div>
   </div>
   <!-- image gallery end  -->
+  <!-- form section  -->
+<div class="form_section">
+    <div class="form_img">
+        <div class="form_title">
+            <h3>Stay with us</h3>
+            <small>We ensure quality and time</small>
+        </div>
+        <div>
+            <form action="">
+                <input type="text" placeholder="Full Name">
+                <input type="text" placeholder="Email Address">
+                <textarea name="" id="" cols="30" rows="10"  placeholder="Messages"></textarea>
+                <div>
+                    <input id="check" type="checkbox"><label for="check">Subcribe newslater</label>
+                </div>
+            </form>
+        </div>
+    </div>
+    
+
+</div>
 </body>
 </html>
